maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: not found: value d
	if(isDirLibre(d)){
                      ^